--- a/test/pages/community/main/main.wxss
+++ b/test/pages/community/main/main.wxss
@@ -83,7 +83,7 @@ page {
 .cards-content {
   position: relative;
   width: 710rpx;
-  margin-top: 20rpx;
+  margin: 20rpx auto auto auto;
   top: 100rpx;
 }
 
@@ -132,7 +132,8 @@ page {
 .main-content {
   position: relative;
   width: 100%;
-  height: 240rpx;
+  height: 210rpx;
+  overflow: hidden;
 }
 
 .content-img-container {
@@ -159,6 +160,7 @@ page {
   position: absolute;
   left: 230rpx;
   top: 20rpx;
+  white-space:pre-wrap;
 }
 
 .content-word2 {
@@ -170,6 +172,7 @@ page {
   position: absolute;
   left: 30rpx;
   top: 20rpx;
+  white-space:pre-wrap;
 }
 
 .etc {
