--- a/test/pages/community/subpage/subpage.wxss
+++ b/test/pages/community/subpage/subpage.wxss
@@ -84,7 +84,8 @@ page {
   .main-content{
     position: relative;
     width: 100%;
-    height: 240rpx;
+    height: 210rpx;
+    overflow: hidden;
   }
   .content-img-container{
     width:180rpx;
