--- a/test/pages/home/music/music.wxml
+++ b/test/pages/home/music/music.wxml
@@ -1,42 +1,42 @@
 <!--home/music.wxml-->
 <view class = "container">
     <view class = "music_box">
-        <view class = "music_border" bindtap = "chooseMusic" data-index="0">
-            <image class="music_img light_rain" src="{{chosen==0?selected_list[0]:unselected_list[0]}}"></image>
+        <view class = "music_border" bindtap = "chooseMusic0" data-index="0">
+            <image class="music_img light_rain" src="{{chosen[0]==1?selected_list[0]:unselected_list[0]}}"></image>
             <text>小雨</text>
         </view>
-        <view class="music_border" bindtap="chooseMusic" data-index="1">
-            <image class="music_img heavy_rain" src="{{chosen==1?selected_list[1]:unselected_list[1]}}"></image>
+        <view class="music_border" bindtap="chooseMusic1" data-index="1">
+            <image class="music_img heavy_rain" src="{{chosen[1]==1?selected_list[1]:unselected_list[1]}}"></image>
             <text>大雨</text>
         </view>
     </view>
     <view class = "music_box">
-        <view class = "music_border" bindtap="chooseMusic" data-index="2">
-            <image class="music_img sea" src="{{chosen==2?selected_list[2]:unselected_list[2]}}"></image>
+        <view class = "music_border" bindtap="chooseMusic2" data-index="2">
+            <image class="music_img sea" src="{{chosen[2]==1?selected_list[2]:unselected_list[2]}}"></image>
             <text>海浪</text>
         </view>
-        <view class = "music_border" bindtap="chooseMusic" data-index="3">
-            <image class="music_img bird" src="{{chosen==3?selected_list[3]:unselected_list[3]}}"></image>
+        <view class = "music_border" bindtap="chooseMusic3" data-index="3">
+            <image class="music_img bird" src="{{chosen[3]==1?selected_list[3]:unselected_list[3]}}"></image>
             <text>鸟鸣</text>
         </view>
     </view>
     <view class = "music_box">
-        <view class = "music_border" bindtap="chooseMusic" data-index="4">
-            <image class="music_img wet" src="{{chosen==4?selected_list[4]:unselected_list[4]}}"></image>
+        <view class = "music_border" bindtap="chooseMusic4" data-index="4">
+            <image class="music_img wet" src="{{chosen[4]==1?selected_list[4]:unselected_list[4]}}"></image>
             <text>湿地</text>
         </view>
-        <view class = "music_border" bindtap="chooseMusic" data-index="5">
-            <image class="music_img wind" src="{{chosen==5?selected_list[5]:unselected_list[5]}}"></image>
+        <view class = "music_border" bindtap="chooseMusic5" data-index="5">
+            <image class="music_img wind" src="{{chosen[5]==1?selected_list[5]:unselected_list[5]}}"></image>
             <text>风声</text>
         </view>
     </view>
     <view class = "music_box">
-        <view class = "music_border" bindtap="chooseMusic" data-index="6">
-            <image class="music_img sun" src="{{chosen==6?selected_list[6]:unselected_list[6]}}"></image>
+        <view class = "music_border" bindtap="chooseMusic6" data-index="6">
+            <image class="music_img sun" src="{{chosen[6]==1?selected_list[6]:unselected_list[6]}}"></image>
             <text>清晨</text>
         </view>
-        <view class = "music_border" bindtap="chooseMusic" data-index="7">
-            <image class="music_img water" src="{{chosen==7?selected_list[7]:unselected_list[7]}}"></image>
+        <view class = "music_border" bindtap="chooseMusic7" data-index="7">
+            <image class="music_img water" src="{{chosen[7]==1?selected_list[7]:unselected_list[7]}}"></image>
             <text>流水</text>
         </view>
     </view>
